--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Mammals -- Colorado'
 - !lcc 'QL'
 - !lcc 'QH'
+- GITenberg
 title: A New Subspecies of Wood Rat (Neotoma mexicana) from Colorado
 url: http://www.gutenberg.org/ebooks/31148
